Fixed WS-17 Fixes #529 Paginator in Admin Panel not properly aligning on tabs

--- a/templates/admin/css/admin.css
+++ b/templates/admin/css/admin.css
@@ -993,7 +993,6 @@ color:#111;
     font-size: 13px;
     position: absolute;
     left: -400px;
-    top: 531px;
     padding:5px 0;
     position:relative;
     word-spacing: 15px;
